<resources>
    <string name="app_name">coroutine</string>
    <string name="button">Button</string>
    <string name="enter_name">Enter Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="asc">Asc</string>
    <string name="find">Find</string>
    <string name="desc">Desc</string>
    <string name="enter_phone">Enter Phone</string>
</resources>